feat update to kaafihai

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kaafi-hai/styles",
+  "name": "@kaafihai/styles",
   "version": "0.0.1-alpha01",
   "description": "",
   "keywords": [],
