--- a/package.json
+++ b/package.json
@@ -1,16 +1,46 @@
 {
-  "name": "@kaafihai/styles",
-  "version": "0.0.1-alpha02",
+  "name": "@kaafihai/react",
+  "version": "0.0.1-alpha03",
   "description": "",
   "keywords": [],
   "author": "",
   "license": "MIT",
   "packageManager": "pnpm@10.26.1",
+  "type": "module",
   "files": [
-    "index.css"
+    "index.css",
+    "components",
+    "lib",
+    "tsconfig.json"
   ],
-  "main": "index.css",
+  "main": "./index.css",
   "exports": {
-    ".": "./index.css"
+    ".": "./index.css",
+    "./lib": "./lib/index.ts",
+    "./components/*": "./components/*.tsx"
+  },
+  "sideEffects": false,
+  "devDependencies": {
+    "@base-ui/react": "^1.0.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "react": "^19",
+    "react-dom": "^19",
+    "recharts": "2.15.4",
+    "tw-animate-css": "1.4.0",
+    "typescript": "5.9.3"
+  },
+  "peerDependencies": {
+    "@base-ui/react": "^1.0.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "react": "^19",
+    "react-dom": "^19",
+    "recharts": "3.6.0",
+    "tw-animate-css": "1.4.0"
   }
 }
