--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "sideEffects": false,
   "devDependencies": {
-    "@base-ui/react": "^1.0.0",
+    "@base-ui/react": "1.0.0",
+    "@phosphor-icons/react": "2.1.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "class-variance-authority": "0.7.1",
@@ -29,11 +30,13 @@
     "react": "^19",
     "react-dom": "^19",
     "recharts": "2.15.4",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "1.4.0",
     "typescript": "5.9.3"
   },
   "peerDependencies": {
-    "@base-ui/react": "^1.0.0",
+    "@base-ui/react": "1.0.0",
+    "@phosphor-icons/react": "2.1.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "class-variance-authority": "0.7.1",
@@ -41,6 +44,7 @@
     "react": "^19",
     "react-dom": "^19",
     "recharts": "3.6.0",
+    "tailwindcss": "^4.1.18",
     "tw-animate-css": "1.4.0"
   }
 }
